// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date input nested dependant components passes through label params without breaking 1`] = `

<label class="govuk-label govuk-date-input__label"
       for="dob-day"
>
  Day
</label>
<label class="govuk-label govuk-date-input__label"
       for="dob-month"
>
  Month
</label>
<label class="govuk-label govuk-date-input__label"
       for="dob-year"
>
  Year
</label>

`;

exports[`Date input passes through fieldset params without breaking 1`] = `

<fieldset class="govuk-fieldset"
          aria-describedby="dob-hint"
>
  <legend class="govuk-fieldset__legend">
    What is your date of birth?
  </legend>
</fieldset>

`;

exports[`Date input passes through html fieldset params without breaking 1`] = `

<fieldset class="govuk-fieldset"
          aria-describedby="dob-error"
>
  <legend class="govuk-fieldset__legend">
    What is your
    <b>
      date of birth
    </b>
    ?
  </legend>
</fieldset>

`;

exports[`Date input renders the error message 1`] = `

<span id="dob-errors-error"
      class="govuk-error-message"
>
  Error message goes here
</span>

`;

exports[`Date input renders the hint 1`] = `

<span id="dob-errors-hint"
      class="govuk-hint"
>
  For example, 31 3 1980
</span>

`;
